# aon

./: .aon-engine  .gitignore  LICENSE  MODEL.md  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.github/: CODEOWNERS
.tasks/: a2a-replace-custom-agent-cards-with-a2a-spec.md  admin-onboard-error-msg-stale-cmd-name.md  admin-reinit-missing-creds-security-gap.md  admit-list-invalid-duration-flag.md  admit-list-loses-reply-to-envelope.md  anon-creds-not-emitted-to-team-creds-dir.md  anon-deny-pub-overrides-allow-list.md  aon-auth-render-auto-backup.md  aon-auth-render-config-sync-with-docker-compose-mount.md  aon-auth-render-warn-on-acl-drift.md  aon-cmd-gate-acl-update.md  aon-cmd-gate-async-operator-ask.md  aon-cmd-gate-evolve-argv-generator.md  aon-cmd-gate-evolve-deploy.md  aon-cmd-gate-evolve-gepa-loop.md  aon-cmd-gate-evolve-judge.md  aon-cmd-gate-evolve-map-elites-archive.md  aon-cmd-gate-evolve-runner.md  aon-cmd-gate-evolve-shadow.md  aon-cmd-gate-learn-from-overrides.md  aon-cmd-gate-self-evolving-prompt.md  aon-cmd-gate-tamper-proofing.md  aon-connect-detect-missing-anon-creds.md  aon-connect-local-auto-enroll-if-role-not-in-roster.md  aon-connect-pynacl-venv-missing.md  aon-creds-all-stderr-bug.md  aon-destructive-ops-audit.md  aon-doctor-warn-pynacl-missing.md  (+176 more)
aon-card/: Cargo.toml
aon-card/src/: main.rs
mcp-server/: README.md  pyproject.toml
mcp-server/src/aon_mcp/: __main__.py  acl.py  client.py  registry.py  subjects.py
mcp-server/src/aon_mcp/a2a/: cards.py  dispatcher.py  schemas.py  skill_map.py  worker.py
mcp-server/src/team_alpha_mcp/: __init__.py  __main__.py  acl.py  client.py  crypto.py  registry.py  subjects.py
mcp-server/src/team_alpha_mcp/a2a/: __init__.py  bridge.py  cards.py  dispatcher.py  lifecycle.py  worker.py
mcp-server/tests/: test_acl.py  test_cards.py  test_crypto.py  test_flood.py  test_smoke.py
(+198 files in other folders)
