[package]
name = "aon-card"
version = "0.1.0"
edition = "2021"
description = "A2A agent card generator and NATS publisher for aon"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
async-nats = "0.35"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
