[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "team-alpha-mcp"
version = "0.1.0"
description = "MCP server wrapping the team-alpha NATS coordination protocol"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.0",
  "nats-py>=2.7",
]

[project.scripts]
team-alpha-mcp = "team_alpha_mcp.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
