[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aon-mcp"
version = "0.2.0"
description = "MCP server wrapping the aon NATS coordination protocol"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.0",
  "nats-py>=2.7",
]

[project.scripts]
aon-mcp = "aon_mcp.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
